--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on:
     types: [opened, edited, synchronize]
   issues:
     types: [opened, edited, deleted]
+  issue_comment:
+    types: [edited]
 
 jobs:
   job1:
