Update issue_comment types in workflow configuration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   issues:
     types: [opened, edited, deleted]
   issue_comment:
-    types: [edited]
+    types: [open, edited, deleted]
 
 jobs:
   job1:
